# LogicXGNN

./: .gitignore  README.md  build_logicGNN.py  explain_gnn.py  explainer_pipeline.py  fix_node_features.py  gnn.py  grounding.py  load_data.py  main.py  main_pretrained.py  model_loading.py  paper.md  paper_notes.md  pyproject.toml  test_checkpoint_loading.py  test_pretrained_logic.py  utils.py
