[project]
name = "logicxgnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "aim>=3.29.1",
    "cloudpickle>=3.1.2",
    "matplotlib",
    "networkx==3.4.2",
    "optuna>=4.6.0",
    "scikit-learn",
    "torch",
    "torch-geometric==2.6.1",
]
